# cp-template

./: .gitignore  README.md
.github/workflows/: cmake.yml  lint.yml
src/: aho_corasick.h  all.h  bit.h  bitwise_fft.h  debugger.h  dinic_flow.h  dinic_flow_scaling.h  dsu.h  dsu_rollback.h  fft.h  fft_mod.h  hash_array.h  kmp.h  mincost_flow.h  mincost_flow_potential.h  modular.h  ntt.h  ntt_with_is.h  ordered_set.h  segment_tree.h  slope_trick.h  sparse_table.h  suffix_array.h
tests/: CMakeLists.txt  aho_corasick_test.cc  bit_test.cc  bitwise_fft_test.cc  dinic_flow_scaling_test.cc  dinic_flow_test.cc  dsu_rollback_test.cc  dsu_test.cc  fft_mod_test.cc  fft_test.cc  hash_array_test.cc  kmp_test.cc  mincost_flow_potential_test.cc  mincost_flow_test.cc  modular_test.cc  ntt_test.cc  ntt_with_is_test.cc  segment_tree_test.cc  slope_trick_test.cc  sparse_table_test.cc  suffix_array_test.cc
